# my-dez-2025

./: .env.template  .gitignore  .gptignore  Makefile  Makefile.utils.sh  Makefile1  README.md  all-files.txt  config.yaml  gen_config.allGen.sh  install-Claude-2.2.sh  install-python@3.12-macos.sh  install-rush.sh  install-with-fixes.Claude-1.sh  install-with-fixes.sh  pyproject.toml  requirements.txt
common/: conf.sh  load_envs.sh  logger.sh  utils.sh
dagster_project/: workspace.yaml
dagster_project/dagster_dez/: assets.py  assets_dbt.py  jobs.py
data/: .load_data.sh
dbt/: dbt_project.yml  profiles.yml
dbt/my_dez_2025/models/marts/: fact_trips.sql
dbt/my_dez_2025/models/staging/: stg_trips.sql
docker/: dagster-odp.yml  metabase.yml  postgresql.Makefile  postgresql.Makefile.utils.sh  postgresql.yml
install-with-fixes.cg3/: Makefile  install-Claude-2.sh  requirements.txt
src/: conf.py  ingest_oltp.py  logger.py  main.py  utils.py
tests/: conftest.py  test_env.py  test_structure.py
